--- a/corehq/apps/app_manager/static/app_manager/json/commcare-profile-settings.yaml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-profile-settings.yaml
@@ -181,6 +181,7 @@
   commcare_default: "cc-su-man"
   contingent_default: [{"condition": "{features.sense}='true'", "value": "cc-su-auto"}]
   group: "sense"
+  force: true
 
 - name: "Extra Key Action"
   description: "What the 'Extra Key' (# on Nokia Phones) does when pressed"
