--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -59,6 +59,7 @@ branches:
   - lwyszomi:ilsgateway-supervision-upload
   - lwyszomi:ews_report_chart_checkboxes
   - graph-bulk-translations # Noah 2/5
+  - dhis2 # Norman 2/6
 submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
