--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -61,6 +61,7 @@ branches:
   - graph-bulk-translations # Noah 2/5
   - dhis2 # Norman 2/6
   - daily-form-stats-export-all # Nick P 2/6
+  - static-updates # Biyeun 2/9
 submodules:
   submodules/dimagi-utils-src:
     # let's leave this here even when empty
