--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -54,6 +54,7 @@ branches:
 #  - double-management # SK 12/1
   - vellum-model-iteration # daniel 1/22
   - locations-as-groups # tw 1/20
+  - locations-as-groups-ui # tw 2/17
   - fixtures-spike  # cz 1/29
   - tdh-tiles # Noah 2/1
   - graph-bulk-translations # Noah 2/5
