--- a/scripts/staging.yaml
+++ b/scripts/staging.yaml
@@ -61,6 +61,7 @@ branches:
   - dhis2 # Norman 2/6
   - project-settings-update # sravan 1/30
   - report-builder # Noah 2/16
+  - django1.6 # SK 18/2
 submodules:
   submodules/touchforms-src:
     # let's leave this here even when empty
