Add django-field-audit dependency and make requirements

--- a/requirements/base-requirements.in
+++ b/requirements/base-requirements.in
@@ -19,6 +19,7 @@ django-compressor
 django-countries
 django-crispy-forms
 django-cte
+django-field-audit
 django-formtools
 django-logentry-admin
 django-oauth-toolkit
