--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -79,4 +79,5 @@ branches:
     - smh/multi-select-case-list-selectedValues-refactor # Steph Aug 8
     - dependabot/pip/requirements/stripe-4.0.2  # Biyeun Aug 11
     #- jls/web-apps-upload # Jenny Aug 15
+    - jc/USH-1371  # Jing/Joel Aug 16
 submodules: { }
