--- a/scripts/staging.yml
+++ b/scripts/staging.yml
@@ -80,4 +80,5 @@ branches:
     - dependabot/pip/requirements/stripe-4.0.2  # Biyeun Aug 11
     #- jls/web-apps-upload # Jenny Aug 15
     - jc/USH-1371  # Jing/Joel Aug 16
+    - dependabot/npm_and_yarn/leaflet-1.8.0  # Biyeun Aug 17 (impacts maps)
 submodules: { }
