--- a/corehq/apps/app_manager/static/app_manager/json/commcare-app-settings.yml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-app-settings.yml
@@ -1,8 +1,10 @@
 - id: application_version
   name: "App Version"
   description: ""
-  values: ["1.0", "2.0"]
-  value_names: ["1.x", "2.x"]
+  value_pairs:
+    # [values, value_names]
+    - ['1.0', '2.0']
+    - ['2.0', '2.x']
   default: "2.0"
   disabled: true
   disabled_txt: "We suggest moving to CommCare 2.0 and above, unless your project is using referrals"
@@ -26,16 +28,22 @@
 - id: platform
   name: "Java Phone Platform"
   description: "The kind of Java phone you want to run the application on"
-  values: ['nokia/s40', 'nokia/s60', 'winmo', 'generic']
-  value_names: ['Nokia S40 (default)', 'Nokia S60', 'WinMo', 'Generic']
+  value_pairs:
+    - ['nokia/s40', 'Nokia S40 (default)']
+    - ['nokia/s60', 'Nokia S60']
+    - ['winmo', 'WinMo']
+    - ['generic', 'Generic']
   default: 'nokia/s40'
 
 - id: text_input
   name: "Text Input"
   description: "What characters to allow users to input"
   widget: text_input
-  values: ['roman', 'native', 'custom-keys', 'qwerty']
-  value_names: [Roman, Native (International), Custom Keys, Full Keyboard]
+  value_pairs:
+    - ['roman', 'Roman']
+    - ['native', 'Native (International)']
+    - ['custom-keys', 'Custom Keys']
+    - ['qwerty', 'Full Keyboard']
   default: roman
   since: {qwerty: '2.6', 'custom-keys': '1.3'}
   requires: "{hq.platform}='nokia/s40'||{hq.platform}='nokia/s60'"
@@ -128,11 +136,10 @@
 
 - id: translation_strategy
   name: 'Translations Strategy'
-  values: ['dump-known', 'select-known', 'simple']
-  value_names:
-   - 'Version 1 translations (old)'
-   - 'Version 2 translations (recommended)'
-   - 'Simple (FOR TESTING ONLY: crashes with any unrecognized user-defined translations)'
+  value_pairs:
+    - ['dump-known', 'Version 1 translations (old)']
+    - ['select-known', 'Version 2 translations (recommended)']
+    - ['simple', 'Simple (FOR TESTING ONLY: crashes with any unrecognized user-defined translations)']
   default: 'select-known'
   requires: "{$parent.doc_type}='Application'"
   preview: true
@@ -150,16 +157,19 @@
 - id: use_grid_menus
   name: Modules Menu Display
   description: Display root menu as a list or grid. Read more on the <a target="_blank" href="https://help.commcarehq.org/display/commcarepublic/Grid+View+for+Form+and+Module+Screens">Help Site</a>.
-  values: [false, true]
-  value_names: ['List', 'Grid']
+  value_pairs:
+    - ['false', 'List']
+    - ['true', 'Grid']
   default: false
   since: "2.24"
 
 - id: grid_form_menus
   name: Forms Menu Display
   description: Configure form menus display. For per-module option turn on grid view for the form's menu in a module under module's settings page. Read more on the <a target="_blank" href="https://help.commcarehq.org/display/commcarepublic/Grid+View+for+Form+and+Module+Screens">Help Site</a>.
-  values: ['none', 'all', 'some']
-  value_names: ['List', 'Grid', 'Enable Menu Display Setting Per-Module']
+  value_pairs:
+    - ['none', 'List']
+    - ['all', 'Grid']
+    - ['some', 'Enable Menu Display Setting Per-Module']
   default: 'none'
   since: '2.24'
 
@@ -167,8 +177,10 @@
   name: Target CommCare Flavor
   description: "Restrict this app to the selected CommCare flavor"
   toggles: TARGET_COMMCARE_FLAVOR
-  values: ['none', 'commcare', 'commcare_lts']
-  value_names: ['None', 'CommCare', 'CommCare LTS']
+  value_pairs:
+    - ['none', 'None']
+    - ['commcare', 'CommCare']
+    - ['commcare_lts', 'CommCare LTS']
   supports_linked_app: true
   default: 'none'
   since: '2.43'
@@ -184,14 +196,9 @@
   name: App Aware Location Fixture Format
   description: Location Fixture format that is provided in the restore for this app
   toggle: HIERARCHICAL_LOCATION_FIXTURE
-  values:
-    - 'project_default'
-    - 'both_fixtures'
-    - 'only_flat_fixture'
-    - 'only_hierarchical_fixture'
-  value_names:
-    - 'Project Default'
-    - 'Both Hierarchical and Flat Fixture'
-    - 'Only Flat Fixture'
-    - 'Only Hierarchical Fixture'
+  value_pairs:
+    - ['project_default', 'Project Default']
+    - ['both_fixtures', 'Both Hierarchical and Flat Fixture']
+    - ['only_flat_fixture', 'Only Flat Fixture']
+    - ['only_hierarchical_fixture', 'Only Hierarchical Fixture']
   default: 'project_default'
