--- a/corehq/apps/app_manager/static/app_manager/json/commcare-app-settings.yml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-app-settings.yml
@@ -2,8 +2,7 @@
   name: "App Version"
   description: ""
   values:
-    # A list of value-value_name pairs, or just a list of values. Value
-    # names default to their values in title case.
+    # [value, value name]
     - ['1.0', '1.x']
     - ['2.0', '2.x']
   default: "2.0"
@@ -190,7 +189,10 @@
   name: Mobile UCR Restore Version
   description: Version of mobile UCRs to use. Read more on the  <a target="_blank" href="https://help.commcarehq.org/display/saas/Moving+to+Mobile+UCR+V2">Help Site</a>
   toggle: MOBILE_UCR
-  values: ['1.0', '1.5', '2.0']
+  values:
+    - ['1.0', '1.0']
+    - ['1.5', '1.5']
+    - ['2.0', '2.0']
   default: '1.0'
 
 - id: location_fixture_restore
