--- a/corehq/apps/app_manager/static/app_manager/json/commcare-profile-settings.yml
+++ b/corehq/apps/app_manager/static/app_manager/json/commcare-profile-settings.yml
@@ -2,8 +2,7 @@
   description: "How often CommCare mobile should attempt to check for a new, released application version."
   id: "cc-autoup-freq"
   values:
-    # A list of value-value_name pairs, or just a list of values. Value
-    # names default to their values in title case.
+    # [value, value name]
     - ['freq-never', 'Never']
     - ['freq-daily', 'Daily']
     - ['freq-weekly', 'Weekly']
@@ -56,7 +55,9 @@
 - name: "Logging Enabled"
   description: "Whether logging of incidents should be activated on the client."
   id: "logenabled"
-  values: ["Enabled", "Disabled"]
+  values:
+    - ['Enabled', 'Enabled']
+    - ['Disabled', 'Disabled']
   default: "Enabled"
   group: "log"
   force: true
@@ -144,7 +145,9 @@
   name: "Server User Registration"
   description: "Whether users registered on the phone need to be registered with the submission server."
   id: "user_reg_server"
-  values: ["required", "skip"]
+  values:
+    - ['required', 'Required']
+    - ['skip', 'Skip']
   values_txt: "Set to skip if your deployment does not require users to register with the server. Note that this will likely result in OTA Restore and other features being unavailable."
   default: "required"
   force: true
@@ -176,7 +179,9 @@
   name: "OTA Restore Tolerance"
   description: "Whether OTA Restore is tolerant of failures, ambiguity, duplicate registrations, etc (and proceeds as best it can), or whether it fails immediately in these cases."
   id: "restore-tolerance"
-  values: ["strict", "loose"]
+  values:
+    - ['strict', 'Strict']
+    - ['loose', 'Loose']
   default: "loose"
   force: true
 
@@ -273,7 +278,9 @@
   name: "Loose Media Mode"
   description: "Whether CommCare should search for alternative formats of incompatible media files."
   id: "loose_media"
-  values: ["yes", "no"]
+  values:
+    - ['yes', 'Yes']
+    - ['no', 'No']
   default: "no"
   values_txt: "When loose media mode is set to yes, CommCare will search for alternative media formats for any media that it cannot play. If CommCare attempts to play a file at jr://file/media/prompt_one.mp3 and mp3 files are not supported, the media directory will be searched for other files named prompt_one with alternative extensions which may be supported, for instance prompt_one.wav, and play that instead."
   since: "1.3"
@@ -294,7 +301,13 @@
 - name: "Unsent Form Limit"
   description: "Number of unsent forms on phone before triggering warning text"
   id: "unsent-number-limit"
-  values: ["5", "10", "20", "40", "80", "160"]
+  values:
+    - ['5', '5']
+    - ['10', '10']
+    - ['20', '20']
+    - ['40', '40']
+    - ['80', '80']
+    - ['160', '160']
   default: "5"
   values_txt: "When the phone has this number of unsynced forms stored locally CommCare will trigger a warning"
   since: "2.1"
@@ -371,7 +384,9 @@
 - name: "Fuzzy Search"
   description: "Whether searches on the phone will match similar strings. IE: 'Jhon' will match 'John'"
   id: "cc-fuzzy-search-enabled"
-  values: ["yes", "no"]
+  values:
+    - ['yes', 'Yes']
+    - ['no', 'No']
   default: "yes"
   disabled_default: "no"
   values_txt: "Whether searches can match similar strings"
@@ -423,7 +438,11 @@
 - name: "Default Map Tileset"
   description: "For mobile map displays, chooses a base tileset for the underlying map layer"
   id: "cc-maps-default-layer"
-  values: ["normal", "satellite", "terrain", "hybrid"]
+  values:
+    - ['normal', 'Normal']
+    - ['satellite', 'Satellite']
+    - ['terrain', 'Terrain']
+    - ['hybrid', 'Hybrid']
   default: "normal"
   since: "2.48"
   force: false
@@ -431,7 +450,9 @@
 - name: "Enable Text To Speech"
   description: "Adds a text to speech button for all questions to read out the question text aloud."
   id: "cc-enable-tts"
-  values: ["yes", "no"]
+  values:
+    - ['yes', 'Yes']
+    - ['no', 'No']
   default: "no"
   since: "2.51"
   force: true
@@ -439,7 +460,9 @@
 - name: "Enable asterisk on required question"
   description: "Adds a red asterisk to denote mandatory questions in a form. This setting only works in mobile."
   id: "cc-label-required-questions-with-asterisk"
-  values: ["yes", "no"]
+  values:
+    - ['yes', 'Yes']
+    - ['no', 'No']
   default: "no"
   since: "2.49"
   force: true
