--- a/requirements/base-requirements.in
+++ b/requirements/base-requirements.in
@@ -28,6 +28,7 @@ django-prbac
 django-redis-sessions
 django-redis
 django-recaptcha
+django-ses
 django-statici18n
 django-tastypie
 django-transfer
